--- a/agent/.dev.vars.example
+++ b/agent/.dev.vars.example
@@ -1,2 +1,3 @@
 OPENAI_API_KEY=sk-proj-1234567890
-POLYMARKET_MCP_URL=http://localhost:8787/sse
+HOST=http://localhost:5174
+MOCK_POLYMARKET_CONTRACT=0x1198184D49B50c2e9CE07B9bf92791df95F81f15
